--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduHub - Student Learning Management System</title>
-    <meta name="description" content="A beautiful and interactive learning management system for students featuring progress tracking, assignment management, announcements, and attendance monitoring." />
+    <title>Full Stack Development Course</title>
+    <meta name="description" content="A learning management system for Full Stack Development course covering HTML, CSS, JavaScript, and React fundamentals." />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="EduHub - Student Learning Management System" />
-    <meta property="og:description" content="A beautiful and interactive learning management system for students featuring progress tracking, assignment management, announcements, and attendance monitoring." />
+    <meta property="og:title" content="Full Stack Development Course" />
+    <meta property="og:description" content="A learning management system for Full Stack Development course covering HTML, CSS, JavaScript, and React fundamentals." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
