--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full Stack Development Course</title>
-    <meta name="description" content="A learning management system for Full Stack Development course covering HTML, CSS, JavaScript, and React fundamentals." />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="An Intuitive Learning Management System" />
 
     <meta property="og:title" content="Full Stack Development Course" />
-    <meta property="og:description" content="A learning management system for Full Stack Development course covering HTML, CSS, JavaScript, and React fundamentals." />
+    <meta property="og:description" content="An Intuitive Learning Management System" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
